<resources>
    <string name="app_name">Lab02</string>
    <string name="titulo">Jogo da Velha</string>
    <string name="action_settings">Settings</string>
    <string name="radioButton1player">1 Player</string>
    <string name="radioButton2player">2 Players</string>

    <string name="escolheFacil">Facil</string>
    <string name="escolheDificil">Dificil</string>
    <string name="btStart">Start</string>
    <string name="btRegras">Regras</string>
    <string name="btSair">Sair</string>
    <string name="btRecomecar">Recomeçar</string>

    <string name="ok">Novo</string>
    <string name="title_activity_tabuleiro">TabuleiroActivity</string>
    <string name="bola">O</string>
    <string name="x">X</string>

</resources>
