<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".VelhaMainActivity$PlaceholderFragment"
    android:background="#fff3cd51"
    android:gravity="top"
    android:id="@+id/velha"
    android:layoutMode="clipBounds">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titulo"
        android:id="@+id/titulo"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btStart"
        android:id="@+id/btStart"
        android:elegantTextHeight="true"
        android:background="#ffffa54b"
        android:enabled="false"
        android:layout_below="@+id/titulo"
        android:layout_alignLeft="@+id/titulo"
        android:layout_alignStart="@+id/titulo"
        android:layout_marginTop="46dp"
        android:onClick="onClickButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btRegras"
        android:id="@+id/btRegras"
        android:elegantTextHeight="true"
        android:background="#ffffa54b"
        android:layout_alignTop="@+id/btStart"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btSair"
        android:id="@+id/btSair"
        android:background="#ffffa54b"
        android:layout_alignTop="@+id/btRegras"
        android:layout_alignRight="@+id/titulo"
        android:layout_alignEnd="@+id/titulo"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/ok"
        android:enabled="true"
        android:onClick="onEscolhaPlayer"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/btStart"
        android:layout_toEndOf="@+id/btStart"
        android:background="#ffffa54b" />


</RelativeLayout>